Update Slovak translations in sk.json

--- a/src/i18n/locales/sk.json
+++ b/src/i18n/locales/sk.json
@@ -84,7 +84,7 @@
         "oldest_activity": "Najstaršia aktivita",
         "last_activity": "Posledná aktivita",
         "group_scenes": "Skupinové scény",
-        "quick_search": "Rýchle vyhľadávanie",
+        "quick_search": "Rýchle vyhľadanie",
         "not_seen_in_a_while": "Dlho nevidené",
         "remove": "Odstrániť",
         "add": "Pridať",
@@ -201,7 +201,7 @@
         "contribute": "Prispieť",
         "home": "Domov",
         "activity": "Aktivita",
-        "reporting": "Reporty",
+        "reporting": "Hlásenia",
         "bindings": "Previazania"
     },
     "ota": {
@@ -308,7 +308,7 @@
         "factory_reset": "Obnovenie továrenských nastavení",
         "scan_source": "Zdroj skenovania",
         "select_scan_source": "Vybrať zdroj skenovania",
-        "philips_hue_reset": "Reset Hue",
+        "philips_hue_reset": "Obnovit Philips Hue",
         "serial_numbers": "Sériové čísla (CSV)"
     },
     "values": {
@@ -334,7 +334,7 @@
         "attribute": "Atribút",
         "unknown": "Neznáme",
         "mains_single_phase": "Sieťové napájanie (1-fázové)",
-        "mains_3_phase": "SiSieťové napájanie (3-fázové)",
+        "mains_3_phase": "Sieťové napájanie (3-fázové)",
         "battery": "Batéria",
         "dc_source": "Zdroj jednosmerného prúdu",
         "emergency_mains_constantly_powered": "Núdzová sieť neustále napájaná",
@@ -396,8 +396,8 @@
         "report_problem": "Nahlásiť problém",
         "group": "Skupina",
         "type": "Typ",
-        "EndDevice": "Koncové zariadenie",
-        "Router": "Smerovač",
+        "EndDevice": "Koncové zariadenia",
+        "Router": "Smerovače",
         "GreenPower": "GreenPower",
         "Unknown": "Neznáme",
         "Coordinator": "Koordinátor",
@@ -490,7 +490,7 @@
         "mqtt-user": "Používateľ pre autentifikáciu na MQTT serveri",
         "mqtt-password": "Heslo pre autentifikáciu na MQTT serveri",
         "mqtt-client_id": "ID MQTT klienta",
-        "mqtt-reject_unauthorized": "Zakázať self-signed SSL certifikát",
+        "mqtt-reject_unauthorized": "Zakázať vlastnoručne podpísaný SSL certifikát",
         "mqtt-include_device_information": "Zahrnúť informácie o zariadení do MQTT správ",
         "mqtt-version": "Verzia MQTT protokolu",
         "mqtt-force_disable_retain": "Zakázať uchovávanie všetkých odoslaných správ. Povoľte LEN v prípade, ak váš MQTT broker nepodporuje uchovávanie správ (napr. AWS IoT core, Azure IoT Hub, Google Cloud IoT core, IBM Watson IoT Platform). Povolením sa naruší integrácia Home Assistant.",
